--- a/Anudip project/EmployeeServices/Web.config
+++ b/Anudip project/EmployeeServices/Web.config
@@ -1,36 +1,33 @@
-﻿<?xml version="1.0"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
+<!--
+  For more information on how to configure your ASP.NET application, please visit
+  https://go.microsoft.com/fwlink/?LinkId=169433
+  -->
 <configuration>
-
-  <appSettings>
-    <add key="aspnet:UseTaskFriendlySynchronizationContext" value="true" />
-  </appSettings>
   <system.web>
     <compilation debug="true" targetFramework="4.7.2" />
-    <httpRuntime targetFramework="4.7.2"/>
+    <httpRuntime targetFramework="4.7.2" />
   </system.web>
+  <system.codedom>
+    <compilers>
+      <compiler language="c#;cs;csharp" extension=".cs" type="Microsoft.CodeDom.Providers.DotNetCompilerPlatform.CSharpCodeProvider, Microsoft.CodeDom.Providers.DotNetCompilerPlatform, Version=2.0.1.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" warningLevel="4" compilerOptions="/langversion:default /nowarn:1659;1699;1701" />
+      <compiler language="vb;vbs;visualbasic;vbscript" extension=".vb" type="Microsoft.CodeDom.Providers.DotNetCompilerPlatform.VBCodeProvider, Microsoft.CodeDom.Providers.DotNetCompilerPlatform, Version=2.0.1.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" warningLevel="4" compilerOptions="/langversion:default /nowarn:41008 /define:_MYTYPE=\&quot;Web\&quot; /optionInfer+" />
+    </compilers>
+  </system.codedom>
   <system.serviceModel>
-    <behaviors>
-      <serviceBehaviors>
-        <behavior>
-          <!-- To avoid disclosing metadata information, set the values below to false before deployment -->
-          <serviceMetadata httpGetEnabled="true" httpsGetEnabled="true"/>
-          <!-- To receive exception details in faults for debugging purposes, set the value below to true.  Set to false before deployment to avoid disclosing exception information -->
-          <serviceDebug includeExceptionDetailInFaults="false"/>
-        </behavior>
-      </serviceBehaviors>
-    </behaviors>
-    <protocolMapping>
-        <add binding="basicHttpsBinding" scheme="https" />
-    </protocolMapping>    
-    <serviceHostingEnvironment aspNetCompatibilityEnabled="true" multipleSiteBindingsEnabled="true" />
+    <bindings>
+      <basicHttpBinding>
+        <binding name="BasicHttpBinding_IEmployeeService1" />
+        <binding name="BasicHttpBinding_IEmployeeService" />
+      </basicHttpBinding>
+    </bindings>
+    <client>
+      <endpoint address="http://localhost:56210/EmployeeService.svc"
+        binding="basicHttpBinding" bindingConfiguration="BasicHttpBinding_IEmployeeService1"
+        contract="ServiceReference2.IEmployeeService" name="BasicHttpBinding_IEmployeeService1" />
+      <endpoint address="http://localhost:56210/EmployeeService.svc"
+        binding="basicHttpBinding" bindingConfiguration="BasicHttpBinding_IEmployeeService"
+        contract="ServiceReference1.IEmployeeService" name="BasicHttpBinding_IEmployeeService" />
+    </client>
   </system.serviceModel>
-  <system.webServer>
-    <modules runAllManagedModulesForAllRequests="true"/>
-    <!--
-        To browse web app root directory during debugging, set the value below to true.
-        Set to false before deployment to avoid disclosing web app folder information.
-      -->
-    <directoryBrowse enabled="true"/>
-  </system.webServer>
-
 </configuration>
